# agentbuddy

./: app.py  pyproject.toml
agentbuddy/agent/: base_agent.py
agentbuddy/agents/: base.py  langgraph_agent.py
agentbuddy/webapp/fe/static/: chat.js
app/: app.py
app/setup/: keycloak.py  mongo.py
app/templates/: index.html
tests/: test_agent.py  test_agent_factory.py
