[tool.poetry]
name = "agentbuddy"
version = "0.1.2"
description = ""
authors = ["2mmanu <emmanuele.lacavalla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.112.0"
aiofiles = "^24.1.0"
letta-client = "^0.1.26"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
